Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with 
email address.


2007-Oct-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema:
	cross-probing minor bug solved ( due to last modification): pins/pads not probed


2007-Oct-08 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ gerbview
    Display on screen now updates properly (in Linux version) after clicking on
    the "OK" button provided within the "GerbView Layer Colors" dialog box.


2007-Oct-7 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+ eeschema
	create new file cross-probing.cpp
	move RemoteCommand() to cross-probing.cpp and create SendMessageToPCBNEW()

+ pcbnew
	bug in move pad fixed (could crash pcbnew)
	Small change in selection clarification (side effect removed):
	- Escape or click on title does not show the next popup menu.
	- the title is displayed under linux
	- definition CUIVRE_N translated into COPPER_LAYER_N



2007-Oct-07 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
================================================================================
+ all
  * Various dialog boxes can now (otherwise) be cancelled by pressing the "Esc" key.
    (Some dialog boxes still require attention in that regard though, so that task
    is not yet complete.) And the captions of the "OK" button within various dialog
    boxes have been fully capitalised (meaning that an icon is now provided within
    each of those buttons within the Linux version of KiCad).
  * DIALOG_STYLE (defined within include/wxstruct.h) now includes MAYBE_RESIZE_BORDER
    field. (Refer to 2007-Oct-2 UPDATE notes for the relevance of this.)
  * Beautification and house keeping.
+ eeschema