@@ -4,13 +4,22 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with 
 email address.
 
+2007-Oct-9 UPDATE   Dick Hollenbeck <dick@softplc.com>
+================================================================================
++ pcbnew
+    changed pcbnew/onrightclick.cpp so that a right click only shows the
+    Selection Clarification menu if there is no selected object or if the
+    click is in a position different from where the selection was previously
+    made.
 
+    
 2007-Oct-09 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
 ================================================================================
 + eeschema:
 	cross-probing minor bug solved ( due to last modification): pins/pads not probed
 
 
+>>>>>>> .r316
 2007-Oct-08 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
 ================================================================================
 + gerbview
@@ -30,7 +39,6 @@ email address.
 	- Escape or click on title does not show the next popup menu.
 	- the title is displayed under linux
 	- definition CUIVRE_N translated into COPPER_LAYER_N
-
 
 
 2007-Oct-07 UPDATE   Geoff Harland <gharlandau@yahoo.com.au>
